# Gen_ai

./: .gitignore  GITHUB.md  localama.py  pyproject.toml  requirements.txt
Groq/: app.py
RAG/: simpleRag.ipynb  speech.txt
api/: app.py  client.py
chatbot/: main.py
